--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,7 @@
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"vscjava.vscode-java-pack",
-		// "sinedied.nubesgen-vscode"
+		"sinedied.nubesgen-vscode"
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
