--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start:prod": "node ./bin/www",
     "build": "echo no build needed!"
   },
   "dependencies": {
